--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-22
+% \update      2015-11-27
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -22,11 +22,18 @@
    pattern/loop/sequence in numbered columns, and the placement of each
    pattern at various musical bars in the song.
 
+   \textbf{New:}
+   \index{new!dual song editors}
+   As an option in the \texttt{[user-interface]}
+   section of the "user" configuration file, two song editor windows can be
+   brought onscreen, as a convenience for arrange projects with a large number
+   of sequences.
+
    \index{performance}
    In \textsl{Sequencer64} parlance, the Song Editor creates a
    \textsl{performance}.
    \index{song mode}
-   It also provides the "song mode" of \textsl{Sequencert24},
+   It also provides the "song mode" of \textsl{Sequencert64},
    as opposed to the "live mode" provided by the Patterns Panel.
 
    \index{song editor!takeover}
@@ -97,7 +104,7 @@
    \index{keys!esc (stop)}
    The keystroke for stopping playback is the 'Escape' character.
    It can be configured to be another character (such as 'Space', which
-   would make the space-bar toggle the playback status.
+   would make the space-bar toggle the playback status).
 
    \itempar{Play}{song editor!play}
    \index{L marker}
