--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-22
+% \update      2015-11-27
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -301,13 +301,11 @@
    \index{new!save key}
    With \textsl{Sequencer64 v. 0.9.9.8}, the key that a sequence is set to is
    now saved in the MIDI file along with the rest of the data for the sequence.
-   \textbf{However,},
+   \textbf{However},
    it turns out that a change made to the key, scale, or background sequence in
    the sequence editor is saved in that editor, so that opening another sequence
-   will apply the same settings to that sequence.  This is a feature.
-   The feature has some quirks, and we have made it optional, and tightened
-   it up so that it is applied globally and immediately upon loading the MIDI
-   file.
+   will apply the same settings to that sequence.  This is a feature, now
+   more rigorously supported, as noted below.
 
    If the global-sequence-feature is enabled, and the user selects
    a different key, scale, or background sequence in the sequence editor, 
@@ -319,13 +317,24 @@
    a different key, scale, or background sequence in the sequence editor, 
    then only that sequence will use the selected key, scale, or background.
    The key, scale, or background sequence change will be saved in the MIDI file
-   only for that sequence.
+   only for that sequence, as a SeqSpec meta event.
 
    The global-sequence-feature setting can be made in the "user" configuration
    file.
 
    \itempar{Musical Scale}{pattern editor!scale}
    Selects the desired scale for the pattern.
+   When a scale is selected, the following features are supported:
+
+   \begin{itemize}
+      \item The notes that are not in the scale are shown as grey in the piano
+         roll, to make it easier to key all notes in-scale.
+      \item When harmonic transposition is performed, the notes are shifted
+         so that they remain in scale.
+      \item The exact notes that are considered "in-scale" depend also on the 
+         exact value of the \textbf{Key of Sequence} setting.
+   \end{itemize}
+
    Originally, only the following scales were supported: Off, Major, and Minor.
 
    \textbf{New:}
@@ -343,6 +352,7 @@
 
    The new scales added in \textsl{Sequencer64} are
    \textbf{Harmonic Minor}, \textbf{Melodic Minor}, and \textbf{Whole Tone}.
+   Please let us know of any mistakes found in the new scales.
 
 \begin{figure}[H]
    \centering 
@@ -373,13 +383,16 @@
    \index{new!save scale}
    With \textsl{Sequencer64 v. 0.9.9.7}, the scale that a sequence is set to is
    now saved in the MIDI file along with the rest of the data for the sequence.
-   \textbf{However,},
+   \textbf{However},
    it turns out that a change made to the key, scale, or background sequence in
    the sequence editor is saved in the editor, so that opening another sequence
    will apply the same settings to that sequence.  This is a feature.
-   The feature has some quirks, and we will later make it optional, and tighten
-   it up so that it is applied globally and immediately upon loading the MIDI
-   file.
+   The feature had some quirks, which are fixed, and it is now
+   an optional feature.
+   Also, the user has the option of applying the key/scale/background-sequence
+   either globally (all sequences) or locally, per-sequence, with each sequence
+   holding its key, scale, and background-sequence settings in
+   SeqSpec meta events.
 
    \itempar{Background Sequence}{pattern editor!background sequence}
    One can select another pattern to draw on the background to help with
@@ -413,13 +426,11 @@
    With \textsl{Sequencer64 v. 0.9.9.7}, the background seqeuence that a
    sequence shows is now saved in the MIDI file along with the rest of the
    data for the sequence.
-   \textbf{However,},
+   \textbf{However},
    it turns out that a change made to the key, scale, or background sequence in
    the sequence editor is saved in the editor, so that opening another sequence
-   will apply the same settings to that sequence.  This is a feature.
-   The feature has some quirks, and we will later make it optional, and tighten
-   it up so that it is applied globally and immediately upon loading the MIDI
-   file.
+   will apply the same settings to that sequence.  This is a feature, now
+   more rigorously supported, as noted earlier.
 
 \subsection{Pattern Editor / Piano Roll}
 \label{subsec:seq64_pattern_editor_piano_roll}
