--- a/tex/seq64_usr_file.tex
+++ b/tex/seq64_usr_file.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-11-08
+% \update      2015-11-27
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -318,12 +318,11 @@
    But, for now, this section shows some of the current values.
 
    \begin{verbatim}
-      [user-instrument-4]
-      #   ========================================================
+
       #   ======== Sequencer64-Specific Variables Section ========
-      #   ========================================================
 
       [user-interface-settings]
+
       # These settings specify the soon-to-be-modifiable sizes of
       # the Sequencer64 user-interface elements.
 
@@ -331,7 +330,6 @@
       # 0 = normal style, matches the GTK theme, has brackets.
       # 1 = white grid boxes that have brackets.
       # 2 = black grid boxes.
-
       2       # grid_style
 
       # Specifies box style box around a main-window grid of patterns.
@@ -340,7 +338,6 @@
       # 2 and up = make the brackets thicker and thicker.
       # -1 = same as 0, draw a box one-pixel thick.
       # -2 and lower = draw a box, thicker and thicker.
-
       2       # grid_brackets
 
       # Specifies the number of rows in the main window.
@@ -364,6 +361,60 @@
 
       # Specifies some quantity, it is not known what it means.
       0      # control_height
+
+      # Specifies the initial zoom for the piano rolls.  Ranges from 1.
+      # to 32, and defaults to 2 unless changed here.
+
+      2      # zoom
+
+      # Specifies if the key, scale, and background sequence are to be
+      # applied to all sequences, or to individual sequences.  The
+      # behavior of Seq24 was to apply them to all sequences.  But
+      # Sequencer64 takes it further by applying it immediately, and
+      # by saving to the end of the MIDI file.  Note that these three
+      # values are stored in the MIDI file, not this configuration file.
+      # Also note that reading MIDI files not created with this feature
+      # will pick up this feature if active, and the file gets saved.
+      # It is contagious.
+      #
+      # 0 = Allow each sequence to have its own key/scale/background.
+      #     Settings are saved with each sequence.
+      # 1 = Apply these settings globally (similar to seq24).
+      #     Settings are saved in the global final section of the file.
+
+      1      # global_seq_feature
+
+      # Specifies if the old, console-style font, or the new anti-
+      # aliased font, is to be used as the font throughout the GUI.
+      # In legacy mode, the old font is the default.
+      #
+      # 0 = Use the old-style font.
+      # 1 = Use the new-style font.
+
+      1      # use_new_font
+
+      # Specifies if the user-interface will support two song editor
+      # windows being shown at the same time.  This makes it easier to
+      # edit songs with a large number of sequences.
+      #
+      # 0 = Allow only one song editor (performance editor).
+      # 1 = Allow two song editors.
+
+      1      # allow_two_perfedits
+
+      # Specifies the number of 4-measure blocks for horizontal page
+      # scrolling in the song editor.  The old default, 1, is a bit
+      # small.  The new default is 4.  The legal range is 1 to 6, where
+      # 6 is the width of the whole performance piano roll view.
+
+      4      # perf_h_page_increment
+
+      # Specifies the number of 1-track blocks for vertical page
+      # scrolling in the song editor.  The old default, 1, is a bit
+      # small.  The new default is 8.  The legal range is 1 to 18, where
+      # 18 is about the height of the whole performance piano roll view.
+
+      8      # perf_v_page_increment
    \end{verbatim}
 
 \subsection{Sequencer64 User / User MIDI Settings}
